# CompressionOffloading

./: .clang-format  .gitattributes  .gitignore  .gitmodules  DevEnvSetup.md  README.md  ZyboYoctoGuide.md
.github/workflows/: build-test-run-reusable-workflow.yaml  main.yaml  pull-request-benchmark-workflow.yaml  push-to-main-workflow.yml
Benchmark/: BenchmarkCompressTextFile.c  BenchmarkDeflateInflateTextFile.c  CMakeLists.txt  main.c
Benchmark/Files/: README.md  SmallBasicTextFileCompressed.txt
Benchmark/Files/MultiTextFileAndSubDirZip/DirOfDirs/SubDirWithCopyOfTopLevelFile/: TextFile.txt
Benchmark/Files/MultiTextFileAndSubDirZip_store/: Readme.md
Benchmark/Files/MultiTextFileAndSubDirZip_store/DirOfDirs/OtherDir/: DummyFile.txt  FilleInDirectory.txt
Benchmark/Files/MultiTextFileZip/: Readme.md
Benchmark/Files/MultiTextFileZip_store/: TextFileOne.txt  TextFileTwo.txt
Benchmark/Files/SmallBasicTextFileZip_store/: Readme.md  SmallBasicTextFile.txt
CoDeLib/: CMakeLists.txt  Config.cmake.in  CustomDeflate.md
CoDeLib/Deflate_zlib/: CMakeLists.txt
CoDeLib/Deflate_zlib/src/: Deflate_zlib.c
CoDeLib/FileUtils/: CMakeLists.txt
CoDeLib/FileUtils/src/: FileUtils.c
CoDeLib/Inflate_zlib/: CMakeLists.txt
CoDeLib/Inflate_zlib/src/: Inflate_zlib.c
CoDeLib/RaiiString/: CMakeLists.txt
CoDeLib/RaiiString/src/: RaiiString.c
CoDeLib/Test/: CMakeLists.txt
CoDeLib/Test/Utility/: CMakeLists.txt  FileUtils.c
CoDeLib/Test/src/: TestDeflateInflateZlib.c  TestDeflateInflateZlib.h  TestFileUtils.c  TestFileUtils.h  TestRaiiString.c  TestUnZipMinizip.c  TestUnZipMinizip.h  TestUnZipMinizipInflateZlib.c  TestUnZipMinizipInflateZlib.h  TestZipContentInfo.c  TestZipMinizip.c  TestZipMinizip.h  TestZipMinizipUnZipMinizip.c  TestZipMinizipUnZipMinizip.h  main.c
CoDeLib/UnZip_minizip/: CMakeLists.txt
CoDeLib/UnZip_minizip/src/: UnZip_minizip.c
CoDeLib/ZipContentInfo/: CMakeLists.txt
CoDeLib/ZipContentInfo/src/: ZipContentInfo.c
CoDeLib/Zip_minizip/: CMakeLists.txt
CoDeLib/Zip_minizip/src/: Zip_minizip.c
CoDeLib/include/CoDeLib/: IDeflate.h  IInflate.h  IUnZip.h  IZip.h  ZipContentInfo.h
CoDeLib/include/CoDeLib/Deflate_zlib/: Deflate_zlib.h
CoDeLib/include/CoDeLib/FileUtils/: FileUtils.h
CoDeLib/include/CoDeLib/Inflate_zlib/: Inflate_zlib.h
CoDeLib/include/CoDeLib/RaiiString/: RaiiString.h
CoDeLib/include/CoDeLib/Test/Utility/: FileUtils.h
CoDeLib/include/CoDeLib/UnZip_minizip/: UnZip_minizip.h
CoDeLib/include/CoDeLib/Zip_minizip/: Zip_minizip.h
GitHooks/: pre-commit
Scripts/: BuildAll.py  BuildAndInstallCoDeLib.py  BuildAndInstallExternalLibs.py  BuildBenchmark.py  CheckFormattingAll_c_h_cpp_hpp.py  CleanAll.py  EnvironmentConfig.py  FormatAll_c_h_cpp_hpp.py  RunBenchmark.py  RunTest.py
ZyboEmbeddedLinux/CrossCompilers/aach32/Linux/: Readme.md
ZyboEmbeddedLinux/CrossCompilers/aach32/Linux/compiler/lib/: libSDL2-2.0.so.0.2400.2  libX11.so.6.4.0  libXau.so.6.0.0  libXdmcp.so.6.0.0  libarchive.so.13.6.2  libblkid.so.1  libbz2.so.1  libcrypt.so.2.0.0  libcurl.so.4.8.0  libdrm.so.2  libdw.so.1  libelf.so.1  libepoxy.so.0.0.0  libexpat.so.1.8.10  libfdt.so.1.6.0  libffi.so.8  libfl.so.2  libformw.so.5.9  libgbm.so.1  libgcrypt.so.20.4.1  libgdbm_compat.so.4.0.0  libgettextpo.so.0.5.7  libgio-2.0.so.0.7200.3  libglib-2.0.so.0.7200.3  libgmodule-2.0.so.0  libgmp.so.10  libgnutls.so.30  libgobject-2.0.so.0  libgomp.so.1  libgpg-error.so.0  libgthread-2.0.so.0  (+45 more)
ZyboEmbeddedLinux/CrossCompilers/aach32/Windows/: Readme.md
ZyboEmbeddedLinux/Petalinux/: ExportPetalinuxCrossCompiler.sh  ExportPetalinuxSdk.sh  PetalinuxCrossCompile.md  ZyboPetalinuxGuide.md
ZyboEmbeddedLinux/Petalinux/ZyboSdkSysroot/lib/: ld-linux-armhf.so.3  libBrokenLocale.so.1  libblkid.so.1.1.0  libc.so.6  libc_malloc_debug.so.0  libcap.so.2.66  libcom_err.so.2.1  libdl.so.2  libe2p.so.2  libext2fs.so.2.4  libfdisk.so.1  libgcc_s.so.1  libnsl.so.1  libnss_compat.so.2  libnss_dns.so.2  libnss_files.so.2  libnss_hesiod.so.2  libpam.so.0  libpam_misc.so.0.82.1  libpamc.so.0.82.1  libpthread.so.0  libresolv.so.2  libss.so.2  libsystemd.so.0.34.0  libthread_db.so.1  libudev.so.1.7.4  libutil.so.1  libwrap.so.0.7.6
ZyboEmbeddedLinux/Petalinux/ZyboSdkSysroot/lib/.debug/: ld-linux-armhf.so.3  libBrokenLocale.so.1  libanl.so.1  libblkid.so.1.1.0  libc_malloc_debug.so.0  libcap.so.2.66  libcom_err.so.2.1  libdl.so.2  libe2p.so.2.3  libext2fs.so.2.4  libfdisk.so.1.1.0  libgcc_s.so.1  libm.so.6  libmount.so.1.1.0  libnsl.so.1  libnss_compat.so.2  libnss_db.so.2  libnss_dns.so.2  libnss_files.so.2  libnss_hesiod.so.2  libpam.so.0.85.1  libpam_misc.so.0.82.1  libpamc.so.0.82.1  libpthread.so.0  libresolv.so.2  librt.so.1  libsmartcols.so.1.1.0  libss.so.2.0  libthread_db.so.1  libutil.so.1  libwrap.so.0.7.6
ZyboEmbeddedLinux/Petalinux/ZyboSdkSysroot/lib/systemd/: systemd-udevd
ZyboEmbeddedLinux/Petalinux/ZyboSdkSysroot/lib/udev/: ata_id  cdrom_id  dmi_memory_id  fido_id  mtd_probe  scsi_id  v4l_id
ZyboEmbeddedLinux/Petalinux/ZyboSdkSysroot/usr/lib/: e2initrd_helper  libacl.so.1.1.2301  libasm.so.1  libattr.so.1.1.2501  libcrypto.so.3  libcurl.so.4  libidn2.so.0.3.8  liblzma.so.5  libmnl.so.0.2.0  libpsx.so.2  libssl.so.3  libstdc++.so.6.0.30  libstdc++.so.6.0.30-gdb.py  libsubid.so.4  libtirpc.so.3.0.0  libunistring.so.2.2.0  libuuid.so.1.3.0  libz.so.1  libzstd.so.1.5.2
ZyboEmbeddedLinux/Petalinux/ZyboSdkSysroot/usr/libexec/: nfsrahead  sftp-server
ZyboEmbeddedLinux/Petalinux/ZyboSdkSysroot/usr/sbin/: brctl  chgpasswd  chpasswd.shadow  exportfs  faillock  fatlabel  fectest  flash_erase  flash_lock  flash_otp_dump  flash_otp_erase  flash_otp_info  flash_otp_lock  flash_otp_write  flash_unlock  flashcp  fsck.msdos  groupadd  groupdel  groupmems  groupmod  grpck  grpconv  grpunconv  iconvconfig  logoutd  lsmtd  mkdosfs  mkhomedir_helper  mtd_debug  mtdinfo  mtdpart  nanddump.mtd-utils  nandflipbits  nandtest  nandwrite.mtd-utils  newusers  nfsconf  nfsstat  pam_timestamp_check  (+24 more)
ZyboEmbeddedLinux/Yocto/: ZyboYoctoGuide.md
ZyboEmbeddedLinux/ZynqHelloWorld/: CMakeLists.txt  main.c
(+1130 files in other folders)
